# NMPDE-Guffanti-Grassi-ElZiani

./: .gitignore  CMakeLists.txt  README.md  clean_outputs.sh  run_tests.sh
include/: VerletParallel.hpp  VerletSerial.hpp  WaveParallel.hpp  WaveSerial.hpp
src/: TestParallel.cpp  TestSerial.cpp  TestVerletParallel.cpp  TestVerletSerial.cpp  VerletParallel.cpp  VerletParallel.hpp  VerletSerial.cpp  WaveEquation.cpp  WaveEquation.hpp  WaveParallel.cpp  WaveParallel.hpp  WaveSerial.cpp  WaveSerial.hpp
test/: TestParallel.cpp  TestSerial.cpp  TestVerletParallel.cpp  TestVerletSerial.cpp
